Fixed shift switch

--- a/data/Application.css
+++ b/data/Application.css
@@ -149,3 +149,8 @@
     font-weight: normal;
 
 }
+
+.Pebbles_Header_Switch slider {
+	min-height: 16px;
+	min-width: 16px;
+}
